src/objects/Up__c.object
<CustomObject>
    <description>Location Day Activity</description>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Ups</relationshipLabel>
        <relationshipName>Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Day__c</fullName>
        <label>Location Day</label>
        <referenceTo>Location_Day__c</referenceTo>
        <relationshipLabel>Ups</relationshipLabel>
        <relationshipName>Ups_Location_Day</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location_UP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location UP</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Ups</relationshipLabel>
        <relationshipName>UpsLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Up</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Activity_Type__c</columns>
        <columns>Lead__c</columns>
        <columns>Location_Day__c</columns>
        <columns>Location_UP__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LDA-{0000000}</displayFormat>
        <label>Location Day Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>